@@ -1,5 +1,12 @@
 2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/fs/ntfs.c: Eliminate useless divisions in favor of shifts.
+	* grub-core/fs/ntfscomp.c: Likewise.
+	* include/grub/ntfs.h (grub_ntfs_data): Replace spc with log_spc.
+	(grub_ntfs_comp): Likewise.
+
+2013-01-05  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/fs/nilfs2.c (-grub_nilfs2_palloc_groups_per_desc_block):
 	Rename to ...
 	(grub_nilfs2_palloc_log_groups_per_desc_block): ... this. Return log
